--- a/web-portfolio/style.css
+++ b/web-portfolio/style.css
@@ -1,9 +1,73 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 h1 {
   font-size: 50px;
 }
-.name-highlight {
+h2 {
+  font-size: 40px;
+}
+p {
+  color: dimgray;
+}
+.orange-highlight {
   color: orange;
+}
+.half-width {
+  width: 40%;
+  float: left;
+  margin-left: 5%;
+  padding-left: 2%;
+}
+.half-width img {
+  width: 100%;
+}
+
+.top-banner {
+  background-repeat: no-repeat;
+  background-image: url(./images/top-banner.png);
+}
+section {
+  height: 500px;
+  clear: both;
+}
+.link-button {
+  text-decoration: none;
+  background-image: linear-gradient(45deg, lightSalmon, tomato);
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+}
+.dream-area {
+  background-image: url(./images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+.single-experience {
+  box-shadow: 10px 10px 40px gray;
+  border-radius: 5px;
+  height: 50%;
+  background-color: white;
+}
+
+.experience-area {
+  background-image: url(./images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#full-stack {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, lightSalmon, tomato);
+  border-image-slice: 1;
+}
+#baby-web {
+  border-left: 7px solid;
+  border-image: linear-gradient(180deg, blue, cyan);
+  border-image-slice: 1;
+}
+
+footer p {
+  text-align: center;
 }
